--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,17 +1,30 @@
 #root {
-    /* display: flex; */
     width: 300px;
-    height: 800px;
-    background-color: blue;
+    height: 950px;
     text-align: center;
+    position: absolute
+}
+
+#context {
+    width: 300px;
+    background-color: yellow;
 }
 
 .menu {
     display: flex;
     background-color: red;
-    width: 100%;
+    width: 300px;
     height: 600px;
     flex-direction: column;
     justify-content: space-evenly;
 }
 
+#picker {
+    background-color: gold;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 200px;
+}
