--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,22 +1,24 @@
 #root {
-    width: 300px;
-    height: 950px;
     text-align: center;
     position: absolute
-}
-
-#context {
-    width: 300px;
-    background-color: yellow;
 }
 
 .menu {
     display: flex;
     background-color: red;
     width: 300px;
-    height: 600px;
+    height: 300px;
     flex-direction: column;
     justify-content: space-evenly;
+}
+
+.settings {
+    display: flex;
+    background-color: green;
+    width: 300px;
+    height: 600px;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 #picker {
